// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Binary Data Set Success scenarios should create a binary partitioned data set 1`] = `
"================Z/OS FILES CREATE DATA-SET-BINARY===============
Data set created successfully.
"
`;

exports[`Create Binary Data Set Success scenarios should create a binary partitioned data set and print attributes 1`] = `
"================Z/OS FILES CREATE DATA-SET-BINARY ===============
{
  \\"success\\": true,
  \\"exitCode\\": 0,
  \\"message\\": \\"\\",
  \\"stdout\\": \\"Data set created successfully.\\\\n\\",
  \\"stderr\\": \\"\\",
  \\"data\\": {
    \\"success\\": true,
    \\"commandResponse\\": \\"Data set created successfully.\\"
  }
}"
`;

exports[`Create Binary Data Set Success scenarios should create a binary partitioned data set with specified primary allocation 1`] = `
"================Z/OS FILES CREATE DATA-SET-BINARY===============
dsorg:     PO
alcunit:   CYL
primary:   20
recfm:     U
blksize:   27998
lrecl:     27998
dirblk:    25
secondary: 10

Data set created successfully.
"
`;

exports[`Create Binary Data Set Success scenarios should create a binary partitioned data set with specified primary and secondary allocation 1`] = `
"================Z/OS FILES CREATE DATA-SET-BINARY===============
dsorg:     PO
alcunit:   CYL
primary:   20
recfm:     U
blksize:   27998
lrecl:     27998
dirblk:    25
secondary: 5

Data set created successfully.
"
`;

exports[`Create Binary Data Set Success scenarios should create a binary partitioned data set with specified size 1`] = `
"================Z/OS FILES CREATE DATA-SET-BINARY===============
alcunit:   CYL
dsorg:     PO
primary:   2
dirblk:    5
recfm:     FB
blksize:   6160
lrecl:     80
secondary: 0

Data set created successfully.
"
`;

exports[`Create Binary Data Set without profiles should create a binary partitioned data set 1`] = `
"Data set created successfully.
"
`;
